Fixed text wrapping issue

--- a/client/src/components/Buttons/Buttons.module.css
+++ b/client/src/components/Buttons/Buttons.module.css
@@ -13,7 +13,7 @@
   font-size: 1rem;
   border-radius: 2rem;
   color: var(--icons-bg-color);
-  word-spacing: 2px;
+  text-wrap: nowrap;
 }
 
 .button:hover {
